add many feature